--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
   <body>
     <!-- Header section -->
     <header>
-      <h1>Pete Thinkful | Artist</h1>
-      <nav>
-        <a href="#about">About</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
-      </nav>
+      <div class="container">
+        <h1>Pete Thinkful | Artist</h1>
+         <nav>
+            <a href="#about">About</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
+        </nav>
+      </div>
     </header>
 
     <main>
@@ -27,8 +29,8 @@
         <!-- About section -->
         <article id="about">
           <h2>About</h2>
-          <section>
-            <h3>Hi! I'm Pete Thinkful</h3>
+          <section class="about_container">
+            <section class="about_image">
             <div>
               <img
                 class="image-circle"
@@ -36,6 +38,9 @@
                 alt="Pete Thinkful"
               />
             </div>
+           
+            <section class="about_text">
+            <h3>Hi! I'm Pete Thinkful</h3>
             <p>I'm an artist living in Denver, Colorado.</p>
             <p>As an artist, I'm interested in:</p>
             <ul>
@@ -47,6 +52,8 @@
               Please feel free to take a look at my website and feel free to
               <a href="#contact">contact me</a>.
             </p>
+               </section>
+            </section> 
           </section>
 
           <section>
@@ -68,7 +75,9 @@
 
         <!-- Portfolio section -->
         <article id="portfolio">
+          
           <h2>Portfolio</h2>
+          <section class="container_portfolio">
           <section>
             <h3>Abstract Red</h3>
             <div>
@@ -101,6 +110,7 @@
               locavore shabby chic forage.
             </p>
           </section>
+            </section>
         </article>
 
         <hr />
